--- a/WeatherService.API/Properties/launchSettings.json
+++ b/WeatherService.API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WeatherService.API.Server": {
+    "WeatherService.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
