--- a/WeatherService.API/appsettings.json
+++ b/WeatherService.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "Data Source=;Initial Catalog=WeatherServiceDB;Integrated Security=True"
+  }
 }
