change update and add delete

--- a/WeatherService.API/appsettings.json
+++ b/WeatherService.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=;Initial Catalog=WeatherServiceDB;Integrated Security=True"
+    "sqlConnection": "Data Source=DESKTOP-E3IL61M;Initial Catalog=WeatherServiceDB;Integrated Security=True"
   }
 }
